--- a/frontend/src/app/components/table/table.component.html
+++ b/frontend/src/app/components/table/table.component.html
@@ -1,12 +1,4 @@
-<div [hidden]="!loading" class="mat-elevation-z8">
-<table mat-table [dataSource]="dataSource" matSort>
-    <ng-container matColumnDef="{{column}}" *ngFor="let column of displayedColumns">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> {{column}} </th>
-      <td mat-cell *matCellDef="let element"> {{element[column]}} </td>
-    </ng-container>
-    
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-</table>
-<mat-paginator [pageSizeOptions]="[5, 10, 20, 50, 100]" showFirstLastButtons></mat-paginator>
+<div *ngIf="loading" style="margin: 0 8px">
+  <h2>List of DroidTechKnow Articles</h2>
+  <ng2-smart-table [settings]="settings" [source]="data"></ng2-smart-table>
 </div>
