add controller service and dialogbox component

--- a/frontend/src/app/components/dashboard/dashboard.component.html
+++ b/frontend/src/app/components/dashboard/dashboard.component.html
@@ -1,2 +1,5 @@
 <app-header></app-header>
-<app-table></app-table>
+<div  style="margin: 0 8px">
+  <h2>List of DroidTechKnow Articles</h2>
+<app-table [data]='data'></app-table>
+</div>
