--- a/frontend/src/app/components/table/table.component.html
+++ b/frontend/src/app/components/table/table.component.html
@@ -1,4 +1,2 @@
-<div *ngIf="loading" style="margin: 0 8px">
-  <h2>List of DroidTechKnow Articles</h2>
-  <ng2-smart-table [settings]="settings" [source]="data" (edit)="editRow($event)" (delete)="deleteRow($event)"></ng2-smart-table>
-</div>
+<ng2-smart-table [settings]="settings" [source]="data" (edit)="editRow($event)" (delete)="deleteRow($event)"></ng2-smart-table>
+<app-dialog-box></app-dialog-box>
