--- a/frontend/src/app/components/dialog-box/dialog-box.component.html
+++ b/frontend/src/app/components/dialog-box/dialog-box.component.html
@@ -1,3 +1,3 @@
-<p>Username: <input type="text"></p>
-<p>Password: <input type="password"></p>
+<p>Username: <input type="text" [(ngModel)]="username"></p>
+<p>Password: <input type="password" [(ngModel)]="password"></p>
 <button type="submit" (click)="deleteSelectedArticle()">Delete</button>
