--- a/frontend/src/app/components/table/table.component.scss
+++ b/frontend/src/app/components/table/table.component.scss
@@ -11,17 +11,14 @@
 
 /deep/ ng2-smart-table  .ng2-smart-action {
     display: inline-block;
-    background: #e99712;
+    background: #f09548;
     color: white !important;
     text-decoration: none !important;
     padding: 5px 8px;
     margin: 1px 0px;
 }
 
-/deep/ ng2-smart-table  .ng2-smart-action-delete-delete:hover {
-    background: #92261e;
-}
-/deep/ ng2-smart-table  .ng2-smart-action-edit-edit:hover {
-    background: #20612e;
+/deep/ ng2-smart-table  .ng2-smart-action-edit-edit:hover, /deep/ ng2-smart-table  .ng2-smart-action-delete-delete:hover {
+    background: #e49008;
 }
 
