--- a/frontend/src/app/components/table/table.component.html
+++ b/frontend/src/app/components/table/table.component.html
@@ -1,2 +1,2 @@
 <ng2-smart-table [settings]="settings" [source]="source" (edit)="editRow($event)" (delete)="deleteRow($event)"></ng2-smart-table>
-<app-dialog-box style="display:none"></app-dialog-box>
+<app-delete-dialog-box style="display:none"></app-delete-dialog-box>
