--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -14,3 +14,28 @@ body {
   font-size: 8pt;
   float: right;
 }
+
+.update-button {
+  border: 2px solid green !important;
+  box-shadow: inset 0px 55px 0px 0px green;
+  color: #fff;
+  padding: 8px 24px;
+  float: right;
+}
+
+.cancel-button {
+  border: 2px solid rgb(113, 128, 113) !important;
+  box-shadow: inset 0px 55px 0px 0px rgb(113, 128, 113);
+  color: #fff;
+  padding: 8px 24px;
+  margin: 0 14px;
+  float: right;
+}
+
+.delete-button {
+  border: 2px solid #e03e28 !important;
+  box-shadow: inset 0px 55px 0px 0px #e03e28;
+  color: #fff;
+  padding: 8px 24px;
+  float: right;
+}
