add add button for

--- a/frontend/src/app/components/table/table.component.html
+++ b/frontend/src/app/components/table/table.component.html
@@ -1,4 +1,4 @@
-<ng2-smart-table [settings]="settings" [source]="source" (edit)="editRow($event)" (delete)="deleteRow($event)">
+<ng2-smart-table [settings]="settings" [source]="source" (create)="create($event)" (edit)="editRow($event)" (delete)="deleteRow($event)">
 </ng2-smart-table>
 <app-delete-dialog-box style="display:none"></app-delete-dialog-box>
 <app-edit-add-dialog-box style="display:none"></app-edit-add-dialog-box>
