--- a/frontend/src/app/components/edit-add-dialog-box/edit-add-dialog-box.component.html
+++ b/frontend/src/app/components/edit-add-dialog-box/edit-add-dialog-box.component.html
@@ -2,12 +2,12 @@
   <mat-form-field *ngFor="let column of headerColumns"
     [ngStyle]="{'width': column=='articleDescription' ? '100%' : '50%' }">
     <div *ngIf="textAraeColumns.indexOf(column)!=-1; else textArea">
-      <textarea matInput [placeholder]="column" [value]="data[column]"></textarea>
+      <textarea matInput [placeholder]="column" [value]="data[column] ? data[column] : ''"></textarea>
     </div>
     <ng-template #textArea>
-      <input matInput [placeholder]="column" [value]="data[column]">
+      <input matInput [placeholder]="column" [value]="data[column] ? data[column] : ''">
     </ng-template>
   </mat-form-field>
   <button (click)="closeDialog()" class="cancel-button btn btn-primary">cancel</button>
-  <button type="submit" (click)="updateSelectedArticle()" class="update-button btn btn-success">Update</button>
+  <button type="submit" (click)="updateSelectedArticle()" class="update-button btn btn-success">{{ updateEdit }}</button>
 </div>
