--- a/frontend/src/app/components/header/header.component.html
+++ b/frontend/src/app/components/header/header.component.html
@@ -1,35 +1,34 @@
 <!--Header-->
 <div class="droidtechknow-hedaer">
-<header class="container"  id="myNavbar2">
-<div class="col-lg-3 logo" >
-	<a href="/" title="Anroid Root, Tutorials, Reviews and Trick"><img class="img img-responsive" alt="DroidTechKnow" title="DroidTechKnow"  src="//droidtechknow.com/images/logo.png"></a>
+	<!--Navigation bar-->
+	<mat-card>
+		<nav class="navbar navbar-inverse">
+			<div class="container">
+				<div class="navbar-header text-center">
+					<button type="button" class="navbar-toggle" id="searchButton">
+						<span class="fa fa-search"></span>
+					</button>
+					<button style="float:left" type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+					</button>
+				</div>
+				<div>
+					<div class="collapse navbar-collapse" id="myNavbar">
+						<ul class="nav navbar-nav">
+							<li>
+								<a href="/" title="Anroid Root, Tutorials, Reviews and Trick">
+									<!-- <img class="img img-responsive"
+										alt="DroidTechKnow" title="DroidTechKnow" width="50px" src="//droidtechknow.com/images/logo.png"> -->
+										<i class="fa fa-home"></i>
+									</a>
+							</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+		</nav>
+	</mat-card>
 </div>
-</header>
-<!--Navigation bar-->
-<nav class="navbar navbar-inverse">
-	<div class="container">
-		<div class="navbar-header text-center">
-			<button type="button"  class="navbar-toggle" id="searchButton" >
-				  <span class="fa fa-search"></span>
-			</button>
-			<button  style="float:left" type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-				<span class="icon-bar"></span>
-				<span class="icon-bar"></span>
-				<span class="icon-bar"></span> 
-				<span class="icon-bar"></span> 
-			</button>
-		</div>
-		<div>
-		    <div class="collapse navbar-collapse" id="myNavbar">
-            <ul class="nav navbar-nav" >
-              <li><a href="/" title="Home"><i class="fa fa-home"></i></a></li>
-		    	  </ul>
-		    </div>
-		</div>
-	</div>
-</nav>
-</div>
-
-
-
-
