--- a/frontend/src/app/components/table/table.component.scss
+++ b/frontend/src/app/components/table/table.component.scss
@@ -1,5 +1,5 @@
 /deep/ ng2-smart-table thead > tr > th  { 
-    background-color: #ec9636;  
+    background-color: #3f51b5;  
     color: white ;
 }
 /deep/ ng2-smart-table .ng2-smart-sort-link { 
@@ -11,7 +11,7 @@
 
 /deep/ ng2-smart-table  .ng2-smart-action {
     display: inline-block;
-    background: #f09548;
+    background: #3f51b5;
     color: white !important;
     text-decoration: none !important;
     padding: 5px 8px;
