--- a/frontend/src/app/components/edit-add-dialog-box/edit-add-dialog-box.component.html
+++ b/frontend/src/app/components/edit-add-dialog-box/edit-add-dialog-box.component.html
@@ -9,5 +9,5 @@
     </ng-template>
   </mat-form-field>
   <button (click)="closeDialog()" class="cancel-button btn btn-primary">cancel</button>
-  <button type="submit" (click)="updateSelectedArticle()" class="update-button btn btn-success">{{ updateEdit }}</button>
+  <button type="submit" (click)="updateAddArticle()" class="update-button btn btn-success">{{ updateEdit }}</button>
 </div>
