--- a/frontend/src/app/components/delete-dialog-box/delete-dialog-box.component.html
+++ b/frontend/src/app/components/delete-dialog-box/delete-dialog-box.component.html
@@ -1,12 +1,12 @@
-<form class="example-form">
+<form class="example-form" (ngSubmit)="ngSubmit(dataService.dialogConfirmationText)" #form="ngForm">
   <mat-form-field class="example-full-width">
-    <input matInput placeholder="Username" value="" [(ngModel)]="username" [ngModelOptions]="{standalone: true}">
+    <input matInput placeholder="Username" value="" name="username" id="username" ngModel>
   </mat-form-field>
   <mat-form-field class="example-full-width">
-    <input matInput placeholder="Password" value="" [(ngModel)]="password" [ngModelOptions]="{standalone: true}">
+    <input matInput placeholder="Password" value="" name="password" id="password" ngModel>
   </mat-form-field>
   <button (click)="closeDialog()" class="cancel-button btn btn-primary">Cancel</button>
-  <button type="submit" (click)="confirm(dataService.dialogConfirmationText)" class="delete-button btn btn-danger">
+  <button type="submit" class="delete-button btn btn-danger">
     {{dataService.dialogConfirmationText}}
   </button>
 </form>
