add functionality added

--- a/frontend/src/app/components/edit-add-dialog-box/edit-add-dialog-box.component.html
+++ b/frontend/src/app/components/edit-add-dialog-box/edit-add-dialog-box.component.html
@@ -1,13 +1,15 @@
 <div class="example-container">
-  <mat-form-field *ngFor="let column of headerColumns"
-    [ngStyle]="{'width': column=='articleDescription' ? '100%' : '50%' }">
-    <div *ngIf="textAraeColumns.indexOf(column)!=-1; else textArea">
-      <textarea matInput [placeholder]="column" [value]="data[column] ? data[column] : ''"></textarea>
-    </div>
-    <ng-template #textArea>
-      <input matInput [placeholder]="column" [value]="data[column] ? data[column] : ''">
-    </ng-template>
-  </mat-form-field>
-  <button (click)="closeDialog()" class="cancel-button btn btn-primary">cancel</button>
-  <button type="submit" (click)="updateAddArticle()" class="update-button btn btn-success">{{ updateEdit }}</button>
+  <form (ngSubmit)="ngSubmit()" #form="ngForm">
+    <mat-form-field *ngFor="let column of headerColumns"
+      [ngStyle]="{'width': column=='articleDescription' ? '100%' : '50%' }">
+      <div *ngIf="textAraeColumns.indexOf(column)!=-1; else textArea">
+        <textarea matInput required [placeholder]="column" [name]="column" [ngModel]="data[column]" (ngModelChange)="data[column] ? data[column] : ''" [value]="data[column] ? data[column] : ''"></textarea>
+      </div>
+      <ng-template #textArea>
+        <input matInput required [placeholder]="column" [name]="column"  [ngModel]="data[column]" (ngModelChange)="data[column] ? data[column] : ''" [value]="data[column] ? data[column] : ''">
+      </ng-template>
+    </mat-form-field>
+    <button (click)="closeDialog()" class="cancel-button btn btn-primary">cancel</button>
+    <button type="submit" (click)="updateAddArticle()" class="update-button btn btn-success">{{ updateEdit }}</button>
+  </form>
 </div>
