add pre dashboard page

--- a/frontend/src/app/components/header/header.component.html
+++ b/frontend/src/app/components/header/header.component.html
@@ -19,7 +19,7 @@
           <div class="collapse navbar-collapse" id="myNavbar">
             <ul class="nav navbar-nav">
               <li>
-                <a href="/" title="Anroid Root, Tutorials, Reviews and Trick">
+                <a [routerLink]="[ '/' ]" title="Dashboard">
                   <!-- <img class="img img-responsive"
                     alt="DroidTechKnow" title="DroidTechKnow" width="50px" src="//droidtechknow.com/images/logo.png"> -->
                   <i class="fa fa-home droidtechknow-header-icon"></i>
