resolve assest problem and testin on server

--- a/frontend/src/app/components/pre-dashboard/pre-dashboard.component.html
+++ b/frontend/src/app/components/pre-dashboard/pre-dashboard.component.html
@@ -56,7 +56,7 @@
         </div>
         <div class="col-lg-7">
           <div class="home_left_img">
-            <img class="img-fluid" src="../../../assets/img/home-left-1.png" alt="">
+            <img class="img-fluid" src="assets/img/home-left-1.png" alt="">
           </div>
         </div>
       </div>
