--- a/frontend/src/app/components/pre-dashboard/pre-dashboard.component.html
+++ b/frontend/src/app/components/pre-dashboard/pre-dashboard.component.html
@@ -151,7 +151,7 @@
               formControlName="message">
             </textarea>
             <div class="validate" *ngIf="!contactForm.get('message').valid && contactForm.get('message').touched">
-              Please should be minimum of 20 charactars.
+              Message should be minimum of 20 charactars.
             </div>
           </div>
 
