--- a/frontend/src/app/components/pre-dashboard/pre-dashboard.component.html
+++ b/frontend/src/app/components/pre-dashboard/pre-dashboard.component.html
@@ -78,6 +78,7 @@
       </div>
     </div>
     <div class="row">
+      <div class="loading" *ngIf="!showPreDashboard"></div>
       <ng-container *ngIf="showPreDashboard">
         <ng-container *ngFor="let number of [14, 47, 45]">
           <div class="col-md-4">
