--- a/frontend/react/src/index.css
+++ b/frontend/react/src/index.css
@@ -1,13 +1,207 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans",
+    "Droid Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  font-family: "Muli", Sans-serif;
+  margin: 0;
+}
+
+@media screen and (max-width: 50em) {
+  body {
+    font-size: large;
+  }
+}
+
+@media screen and (max-width: 40em) {
+  body {
+    font-size: medium;
+  }
+}
+
+@media screen and (max-width: 30em) {
+  body {
+    font-size: smaller;
+  }
+}
+
+* {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+.h1,
+.h2,
+.h3,
+.h4,
+.h5,
+.h6,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+i,
+span {
+  font-family: heebo;
+  text-transform: none;
+  font-weight: 400;
+  font-style: normal;
+  opacity: 1;
+  visibility: visible;
+  -webkit-transition: opacity 0.24s ease-in-out;
+  -moz-transition: opacity 0.24s ease-in-out;
+  transition: opacity 0.24s ease-in-out;
+}
+strong {
+  font-weight: 500;
+}
+h1 {
+  font-size: 35px;
+  font-weight: 500;
+}
+h2 {
+  font-size: 32px;
+}
+h3 {
+  font-size: 28px;
+}
+h4 {
+  font-size: 25px;
+}
+h5 {
+  font-size: 22px;
+}
+h6 {
+  font-size: 20px;
+}
+p {
+  line-height: 32px;
+  font-size: 20px;
+  word-spacing: 2px;
+  font-family: heebo;
+  color: #6a6868;
+  font-weight: 400;
+}
+@media screen and (max-width: 880px) {
+  .h1,
+  .h2,
+  .h3,
+  .h4,
+  .h5,
+  .h6,
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    line-height: 33px;
+  }
+  h1 {
+    font-size: 27px;
+  }
+  h2 {
+    font-size: 23px;
+  }
+  h3 {
+    font-size: 21px;
+  }
+  h4 {
+    font-size: 19px;
+  }
+  h5 {
+    font-size: 27px;
+  }
+  h6 {
+    font-size: 16px;
+  }
+  p {
+    line-height: 32px;
+    font-size: 19px;
+  }
+}
+
+blockquote {
+  padding-left: 45px;
+  min-height: 40px;
+  border-left: none;
+  background: url(http://droidtechknow.com/images/blockquote.png) no-repeat;
+  background-position: left top;
+  background-size: 25px 25px;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
 }
+
+/** font icons **/
+
+/* Rules for sizing the icon. */
+
+.material-icon .material-icons.md-18 {
+  font-size: 18px;
+}
+
+.material-icons.md-24 {
+  font-size: 24px;
+}
+
+.material-icons.md-36 {
+  font-size: 36px;
+}
+
+.material-icons.md-48 {
+  font-size: 48px;
+}
+
+/* Rules for using icons as black on a light background.*/
+
+.material-icons.md-dark {
+  color: rgba(0, 0, 0, 0.54);
+}
+
+.todo-item.done .material-icons.md-dark,
+.material-icons.md-dark:hover {
+  color: rgba(255, 255, 255, 1);
+}
+
+.material-icons.md-dark:hover {
+  -webkit-animation: spin 0.8s ease-in-out 1;
+  -moz-animation: spin 0.8s ease-in-out 1;
+  animation: spin 0.8s ease-in-out 1;
+}
+
+.material-icons.md-light {
+  color: rgba(255, 255, 255, 1);
+}
+
+.material-icons.md-light.md-inactive {
+  color: rgba(255, 255, 255, 0.3);
+}
+
+@-moz-keyframes spin {
+  100% {
+    -moz-transform: rotate(360deg);
+  }
+}
+
+@-webkit-keyframes spin {
+  100% {
+    -webkit-transform: rotate(360deg);
+  }
+}
+
+@keyframes spin {
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+
+
