--- a/frontend/react/src/pages/home/Home.scss
+++ b/frontend/react/src/pages/home/Home.scss
@@ -39,6 +39,7 @@ a {
   max-width: 525px;
   min-height: 670px;
   position: relative;
+  background: url(../../assets/images/login-bg.jpg);
   box-shadow: 0 12px 15px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
 }
 
