--- a/frontend/react/src/pages/home/Home.scss
+++ b/frontend/react/src/pages/home/Home.scss
@@ -7,8 +7,8 @@
 }
 
 .login {
+  overflow: hidden;
   color: #6a6f8c;
-  font: 600 16px/18px "Open Sans", sans-serif;
   background: linear-gradient(87deg,#5e72e4 0,#825ee4 100%)!important;
   background: #384e7f;
 }
@@ -37,7 +37,7 @@ a {
   width: 100%;
   margin: auto;
   max-width: 525px;
-  min-height: 670px;
+  min-height: 100vh;
   position: relative;
   background: url(../../assets/images/login-bg.jpg);
   box-shadow: 0 12px 15px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
@@ -47,7 +47,7 @@ a {
   width: 100%;
   height: 100%;
   position: absolute;
-  padding: 90px 70px 50px 70px;
+  padding: 50px 70px 50px 70px;
   background: rgba(40, 57, 101, 0.9);
 }
 
@@ -113,7 +113,7 @@ a {
 .login-form .group .input,
 .login-form .group .button {
   border: none;
-  padding: 15px 20px;
+  padding: 10px 20px;
   border-radius: 25px;
   background: rgba(255, 255, 255, 0.1);
 }
@@ -189,12 +189,11 @@ a {
 }
 
 .hr {
-  height: 2px;
-  margin: 60px 0 50px 0;
+  height: 1px;
+  margin: 35px 0 35px 0;
   background: rgba(255, 255, 255, 0.2);
 }
 
 .foot-lnk {
   text-align: center;
 }
-
