--- a/frontend/react/src/index.css
+++ b/frontend/react/src/index.css
@@ -664,8 +664,8 @@ pre code {
 .row {
   display: flex;
   flex-wrap: wrap;
-  margin-right: -15px;
-  margin-left: -15px;
+  margin-right: -15px !important;
+  margin-left: -15px !important;
 }
 
 .no-gutters {
@@ -12499,7 +12499,7 @@ fieldset[disabled][disabled] .has-rose .form-control {
   color: #aaa;
 }
 
-.bmd-form-group [class*=" bmd-label"],
+.bmd-form-group [class*="bmd-label"],
 .bmd-form-group [class^="bmd-label"] {
   position: absolute;
   pointer-events: none;
@@ -13635,6 +13635,7 @@ h2.title {
 .description,
 .footer-big p {
   color: #999;
+  line-height: initial;
 }
 
 .text-warning {
@@ -14493,7 +14494,7 @@ fieldset[disabled] .form-group.is-focused .togglebutton label {
 
 .sidebar .sidebar-background {
   position: absolute;
-  z-index: 1;
+  z-index: 0;
   height: 100%;
   width: 100%;
   display: block;
