update gender in profile

--- a/frontend/react/src/pages/profile/Profile.module.scss
+++ b/frontend/react/src/pages/profile/Profile.module.scss
@@ -1,6 +1,9 @@
 .profilePage {
   .toggle {
-    align-self: center;
+    position: absolute;
+    z-index: 9;
+    top: 6px;
+    right: 42px;
   }
 
   .cardHeader {
