add app card component

--- a/frontend/react/src/index.scss
+++ b/frontend/react/src/index.scss
@@ -17016,6 +17016,7 @@ label {
 .card-stats .card-header + .card-footer {
   border-top: 1px solid #eee;
   margin-top: 20px;
+  display: inline-block;
 }
 
 .card-stats .card-header.card-header-icon i {
