--- a/frontend/react/src/index.scss
+++ b/frontend/react/src/index.scss
@@ -19642,3 +19642,56 @@ html[dir="rtl"] .card .card-body, html[dir="rtl"] .card .card-footer {
     box-shadow: 0 2.5em 0 0;
   }
 }
+
+// add button
+.add-button {
+  color: #fff;
+  background-color: $themeColor;
+  right: 16px;
+  bottom: 16px;
+  position: fixed;
+  transform: none;
+  transition: transform 225ms cubic-bezier(0.4, 0, 0.2, 1) 195ms;
+  width: 56px;
+  height: 56px;
+  padding: 0;
+  font-size: 14px;
+  min-width: 0;
+  box-shadow: 0px 3px 5px -1px rgba(0,0,0,0.2), 0px 6px 10px 0px rgba(0,0,0,0.14), 0px 1px 18px 0px rgba(0,0,0,0.12);
+  box-sizing: border-box;
+  min-height: 36px;
+  font-family: "heebo";
+  font-weight: 400;
+  line-height: 1.75;
+  border-radius: 50%;
+  letter-spacing: 0.02857em;
+  text-transform: uppercase;
+  border: 0;
+  cursor: pointer;
+  margin: 0;
+  display: inline-flex;
+  outline: 0;
+  -webkit-appearance: none;
+  -webkit-tap-highlight-color: transparent;
+  justify-content: center;
+  text-decoration: none;
+  vertical-align: middle;
+  align-items: center;
+  user-select: none;
+  border: 0;
+  cursor: pointer;
+  margin: 0;
+  display: inline-flex;
+  outline: none;
+}
+
+.add-button:active {
+  outline: none;
+    box-shadow: 0px 7px 8px -4px rgba(0,0,0,0.2), 0px 12px 17px 2px rgba(0,0,0,0.14), 0px 5px 22px 4px rgba(0,0,0,0.12);
+}
+
+.add-button:hover {
+    background-color: rgb(193, 10, 209);
+    text-decoration: none;  
+}
+
