--- a/frontend/react/src/pages/home/Home.scss
+++ b/frontend/react/src/pages/home/Home.scss
@@ -40,6 +40,7 @@ a {
   min-height: 100vh;
   position: relative;
   background: url(../../assets/images/login-bg.jpg);
+  background-size: cover;
   box-shadow: 0 12px 15px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
 }
 
