margin to complted tasks

--- a/frontend/react/src/components/Todo/completed-task/CompletedTask.scss
+++ b/frontend/react/src/components/Todo/completed-task/CompletedTask.scss
@@ -67,6 +67,7 @@
 
     .todo-item {
         color: #999;
+        margin: 8px 0;
         font-weight: 500;
         display: flex;
         justify-content: space-between;
