update card design

--- a/frontend/react/src/components/Card/Card.scss
+++ b/frontend/react/src/components/Card/Card.scss
@@ -4,5 +4,12 @@
         justify-content: space-between;
         align-items: center;
     }
-    
+
+    .dropdownButton {
+        background: #23212d4f;
+        padding: 10px 12px 6px 12px;
+        border-radius: 50%;
+        cursor: pointer;
+    }
+
 }
