--- a/frontend/react/src/pages/todo/Todo.scss
+++ b/frontend/react/src/pages/todo/Todo.scss
@@ -12,10 +12,12 @@
   }
 
   .todo-in-progress {
+    padding: 0;
   }
 
   .todo-completed {
     opacity: 0.8;
+    padding: 0;
 
     h2 {
       color: rgb(22, 201, 4);
