--- a/frontend/react/src/index.scss
+++ b/frontend/react/src/index.scss
@@ -5353,10 +5353,10 @@ button.close {
   width: 100%;
   pointer-events: auto;
   background-color: #fff;
-  background-clip: padding-box;
-  border: 1px solid rgba(0, 0, 0, 0.2);
+  // background-clip: padding-box;
+  // border: 1px solid rgba(0, 0, 0, 0.2);
   border-radius: 0.3rem;
-  box-shadow: 0 0.25rem 0.5rem rgba(0, 0, 0, 0.5);
+  // box-shadow: 0 0.25rem 0.5rem rgba(0, 0, 0, 0.5);
   outline: 0;
 }
 
