--- a/frontend/react/src/pages/todo/Todo.scss
+++ b/frontend/react/src/pages/todo/Todo.scss
@@ -10,6 +10,11 @@
     padding: 0;
     display: flex;
     flex-wrap: wrap;
+    justify-content: space-between;
+  }
+
+  .todo-box {
+    width: 100%;
   }
 
   .todo-in-progress {
